--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -407,6 +407,7 @@
 **** xref:6.7.2-release-notes.adoc#overview[Overview]
 **** xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
 **** xref:6.7.2-release-notes.adoc#bug-fixes[Bug fixes]
+**** * xref:6.7.2-release-notes.adoc#security-fixes[Security fixes]
 *** TinyMCE 6.7.1
 **** xref:6.7.1-release-notes.adoc#overview[Overview]
 **** xref:6.7.1-release-notes.adoc#security-fix[Security fix]
