DOC-2194: TinyMCE 6.7.2 Release notes. (#2941)
* DOC-2088: typos and other correction post-6.7 docs enterprise release (#2924)

* DOC-2194: 6.7.2-release-notes.adoc

Added file, `6.7.2-release-notes.adoc` to project.

Added 6.7.2-specific release notes outline to this file.

* DOC-2194: 6.7-release-notes.adoc

Update the known issue included in 6.7 to note it is addressed in 6.7.2.

* DOC-2194: nav.adoc

Added 6.7.2-specific navigation.

* DOC-2194: changelog.md

Added entry for this ticket.

* DOC-2177: document `picker_text` property for `urlinput` dialog component (#2929)

Co-authored-by: mkzhx <mkzh.org@gmail.com>

* Bump semver from 5.7.1 to 5.7.2 (#2810)

Bumps [semver](https://github.com/npm/node-semver) from 5.7.1 to 5.7.2.
- [Release notes](https://github.com/npm/node-semver/releases)
- [Changelog](https://github.com/npm/node-semver/blob/v5.7.2/CHANGELOG.md)
- [Commits](https://github.com/npm/node-semver/compare/v5.7.1...v5.7.2)

---
updated-dependencies:
- dependency-name: semver
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* DOC-2194: update release date for release-notes.adoc.

* DOC-2194: update 6.7.2 template outline.

* Update modules/ROOT/pages/6.7.2-release-notes.adoc

* Update modules/ROOT/nav.adoc

* DOC-2194: fix documentation for TINY-10213 in the 6.7.2 Release notes. (#2950)

* DOC-2194: fix documentation for TINY-10213 in the 6.7.2 Release notes.

* Update modules/ROOT/pages/6.7.2-release-notes.adoc

Co-authored-by: lorenzo-pomili <pomili.lorenzo85@gmail.com>

* Update modules/ROOT/pages/6.7.2-release-notes.adoc

Co-authored-by: lorenzo-pomili <pomili.lorenzo85@gmail.com>

* Update modules/ROOT/pages/6.7.2-release-notes.adoc

Co-authored-by: lorenzo-pomili <pomili.lorenzo85@gmail.com>

* Update modules/ROOT/pages/6.7.2-release-notes.adoc

Co-authored-by: l

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -403,6 +403,11 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for TinyMCE 6]
+*** TinyMCE 6.7.2
+**** xref:6.7.2-release-notes.adoc#overview[Overview]
+**** xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
+**** xref:6.7.2-release-notes.adoc#bug-fixes[Bug fixes]
+**** * xref:6.7.2-release-notes.adoc#security-fixes[Security fixes]
 *** TinyMCE 6.7.1
 **** xref:6.7.1-release-notes.adoc#overview[Overview]
 **** xref:6.7.1-release-notes.adoc#security-fix[Security fix]
