--- a/modules/ROOT/partials/configuration/contextmenu.adoc
+++ b/modules/ROOT/partials/configuration/contextmenu.adoc
@@ -21,6 +21,8 @@ To disable the editor's context menu, set this option to `+false+`.
 
 include::partial$misc/admon-ctrl-right-click.adoc[]
 
+include::partial$misc/admon-mobile-context-menus.adoc[]
+
 === Example: using `+contextmenu+`
 
 [source,js]
