--- a/modules/ROOT/pages/6.8-release-notes.adoc
+++ b/modules/ROOT/pages/6.8-release-notes.adoc
@@ -171,7 +171,13 @@ The {productname} 6.8 release includes an accompanying release of the **Advanced
 
 ==== If tinymcespellchecker and typography are both loaded, tinymcespellchecker prevents typography from transforming the string, (tm) into the character ‚Ñ¢.
 //#TINY-9963
+Previously when the {productname} **Spell Checker Pro** plugin and the **Advanced Typography** plugin where both loaded, the **Spell Checker Pro** plugin would prevent the **Advanced Typography** plugin from transforming the string, `(tm)` into the character `™`.
 
+The **Spell Checker Pro** originally would wrap elements with a fake element to underline misspelled words, and as the **Advanced Typography** plugin is designed to detect wrapped elements from the spellchecker, this resulted in it parsing 'tm' instead of `(tm)`.
+
+{productname} 6.8 addresses this issue, now, the **Advanced Typography** parser utilizes functionality provided by internal library, which enables it to identify both the prefix and suffix of an element.
+
+As a result when the **Advanced Typography**  plugin encounters a string 'tm' the system also checks for the presence of parentheses before and after, to ensure it correctly transform's any instance of `(tm)` to `™`.
 
 For information on the **Advanced Typography** plugin, see: xref:advanced-typography.adoc[Advanced Typography].
 
