--- a/modules/ROOT/pages/6.8-release-notes.adoc
+++ b/modules/ROOT/pages/6.8-release-notes.adoc
@@ -366,6 +366,50 @@ As a consequence, users could inadvertently modify content that was meant to be 
 
 As a result, users can no longer modify content that is contained within a non-editable element when using the **Search and Replace** plugin.
 
+=== Merging an external p inside a list via delete or backspace would incorrectly try to move a parent element inside a child element.
+// #TINY-10289
+Previously, when the caret was positioned at either the,
+
+. **beginning** of the `<p>` and the `backspace` key is pressed; or
+. **end** of the `<li>` with **id child** and the `delete` key is pressed.
+
+the `<p>` tag element would be moved inside the child element, rather than the context being merged with the `<li>` child element context.
+
+.Example
+[source, html]
+----
+<ol>
+  <li>List 1</li>
+  <li id="parent">
+    <p>p1</p>
+    <ol>
+      <li id="child">List 1-1 </li>
+    </ol>
+    <p>Place cursor at the start of this line and hit backspace.</p>
+  </li>
+</ol>
+----
+
+As a consequence, a console error `"Uncaught DOMException: Failed to execute 'appendChild' on 'Node': The new child element contains the parent"`, would be displayed in the developer console.
+
+{productname} 6.8 addresses this issue, now, after pressing the backspace or delete key, the parent element no longer attempts to merge into the child element, but rather unwraps the parent element and merges the context into the child element, resulting in:
+
+.Example (result)
+[source, html]
+----
+<ol>
+  <li>List 1</li>
+  <li id="parent">
+    <p>p1</p>
+    <ol>
+      <li id="child">List 1-1 Place cursor at the start of this line and hit backspace.</li>
+    </ol>
+  </li>
+</ol>
+----
+
+As a result, the developer console, no longer displays the console error and the merge between the two elements behaves as expected.
+
 
 [[known-issues]]
 == Known issues
