--- a/modules/ROOT/pages/6.8-release-notes.adoc
+++ b/modules/ROOT/pages/6.8-release-notes.adoc
@@ -195,7 +195,7 @@ In {productname} 6.8, the tooltips of `urlinput` file picker buttons on affected
 
 [options="header"]
 |===============================================================
-|     | Insert/Edit Link | Insert/Edit Image | Insert/Edit Image
+|     | Insert/Edit Link | Insert/Edit Image | Insert/Edit Media
 | Old | "URL"            | "Source"          | "Source"         
 | New | "Browse links"   | "Browse files"    | "Browse files"   
 |===============================================================
