--- a/modules/ROOT/pages/6.8-release-notes.adoc
+++ b/modules/ROOT/pages/6.8-release-notes.adoc
@@ -193,7 +193,7 @@ Consequently, the tooltip does not always clearly indicate the functionality of 
 
 In {productname} 6.8, the tooltips of `urlinput` file picker buttons on affected dialogs have been improved as follows:
 
-[options="header"]
+[cols="h,1,1,1",options="header"]
 |===============================================================
 |     | Insert/Edit Link | Insert/Edit Image | Insert/Edit Media
 | Old | "URL"            | "Source"          | "Source"         
