--- a/modules/ROOT/pages/6.8-release-notes.adoc
+++ b/modules/ROOT/pages/6.8-release-notes.adoc
@@ -126,7 +126,7 @@ Previously, when a user pasted content from Word, the pasted content would be co
 [source, html]
 ----
 <p><s>Sold out on tickets.</s></p>
-<p><s>&nbsp;</s></p>
+<p><u>&nbsp;</u></p>
 <p>Sorry!</p>
 ----
 
